# procrastinate

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  LICENSE.md  LICENSE.rst  MANIFEST.in  README.md  README.rst  data.json  dev-env  docker-compose.yml  endpoint.json  init.sql  migrate.sql  migration.sql  noxfile.py  pre-commit-hook  pyproject.toml  renovate.json  requirements.txt  setup.cfg  setup.py  tox.ini
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  docker-compose.yml  post-create.sh  postStart
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml  release.yml  renovate.json5
.github/workflows/: benchmark.yml  ci.yml  coverage-comment.yml  dependabot-auto-merge.yml  deploy.yml  main.yml  pr-labels.yml  publish.yml  release-drafter.yml
cabbage/: __init__.py  __main__.py  app.py  exceptions.py  jobs.py  metadata.py  postgres.py  retry.py  signals.py  store.py  task_worker.py  tasks.py  testing.py  types.py  utils.py  worker.py
cabbage_demo/: __main__.py  cabbage_app.py  client.py  tasks.py
dev/bench/: data.js
docs/: changelog.md  conf.py  contributing.md  contributing.rst  demos.md  demos.rst  discussions.md  discussions.rst  glossary.md  glossary.rst  howto.rst  howto_index.md  howto_index.rst  index.md  index.rst  quickstart.md  quickstart.rst  reference.rst  requirements.txt  spelling_wordlist.txt
docs/howto/: advanced.md  app.md  app.rst  async.rst  basics.md  blueprints.md  blueprints.rst  command_line.md  command_line.rst  concurrency.md  concurrency.rst  connections.md  connections.rst  connector.md  connector.rst  context.md  context.rst  cron.md  cron.rst  custom_json_encoder_decoder.md  custom_json_encoder_decoder.rst  defer.md  defer.rst  delete_finished_jobs.md  delete_finished_jobs.rst  deployment.rst  django.md  django.rst  env_vars.rst  events.rst  job_store_connect.rst  locks.md  locks.rst  logging.md  logging.rst  middleware.rst  migrations.md  migrations.rst  monitoring.md  monitoring.rst  (+25 more)
docs/sphinxext/: changelog.py
htmlcov/: class_index.html  d_06bc17db9f4373cf___init___py.html  d_1a411aed71005b59___init___py.html  d_1a411aed71005b59_aiopg_connector_py.html  d_41d4b26e8dd1bc3e___init___py.html  d_41d4b26e8dd1bc3e_psycopg2_connector_py.html  d_47cabb07ab40cce5_procrastinate_py.html  d_c09aad739bad58cd___init___py.html  d_c09aad739bad58cd_apps_py.html  d_c09aad739bad58cd_django_connector_py.html  d_c09aad739bad58cd_exceptions_py.html  d_c09aad739bad58cd_healthchecks_py.html  d_c09aad739bad58cd_migrations_magic_py.html  d_c09aad739bad58cd_models_py.html  d_c09aad739bad58cd_placeholder_py.html  d_c09aad739bad58cd_procrastinate_app_py.html  d_c09aad739bad58cd_router_py.html  d_c09aad739bad58cd_settings_py.html  d_c09aad739bad58cd_static_migrations_py.html  d_c09aad739bad58cd_utils_py.html  d_c13d846b404dd470___init___py.html  d_c13d846b404dd470_psycopg2_connector_py.html  d_d981541d4828dbe0___init___py.html  d_d981541d4828dbe0___main___py.html  d_d981541d4828dbe0_aiopg_connector_py.html  d_d981541d4828dbe0_app_py.html  d_d981541d4828dbe0_blueprints_py.html  d_d981541d4828dbe0_builtin_tasks_py.html  d_d981541d4828dbe0_cli_py.html  d_d981541d4828dbe0_connector_py.html  d_d981541d4828dbe0_exceptions_py.html  d_d981541d4828dbe0_job_context_py.html  d_d981541d4828dbe0_jobs_py.html  d_d981541d4828dbe0_manager_py.html  d_d981541d4828dbe0_metadata_py.html  d_d981541d4828dbe0_periodic_py.html  d_d981541d4828dbe0_psycopg2_connector_py.html  d_d981541d4828dbe0_psycopg_connector_py.html  d_d981541d4828dbe0_retry_py.html  d_d981541d4828dbe0_schema_py.html  (+76 more)
procrastinate/: __init__.py  __main__.py  admin.py  aiopg_connector.py  app.py  asyncpg_connector.py  blueprints.py  builtin_tasks.py  cli.py  connector.py  exceptions.py  healthchecks.py  hooks.py  job_context.py  job_processor.py  jobs.py  json_adapter.py  manager.py  metadata.py  middleware.py  migration.py  periodic.py  postgres.py  protocols.py  psycopg2_connector.py  psycopg3_connector.py  psycopg_connector.py  pytest_plugin.py  reloader.py  retry.py  scheduler.py  schema.py  shell.py  signals.py  store.py  structure.sql  sync_psycopg_connector.py  t.py  tasks.py  testing.py  (+3 more)
procrastinate/contrib/: hot_reload.py
procrastinate/demos/: README.md
procrastinate/sql/: __init__.py  queries.sql  schema-pgtap-test.sql  schema.sql  structure.sql
procrastinate_demo/: __main__.py  app.py  client.py  demo_async.py  tasks.py
procrastinate_demos/: README.md  README.rst
procrastinate_demos/demo_async/: __main__.py  app.py  tasks.py
procrastinate_demos/demo_django/: __main__.py  manage.py  procrastinate_app.py
procrastinate_demos/demo_sync/: __main__.py  app.py  tasks.py
scripts/: README.md  bootstrap  docs  docs-spelling  htmldoc  lint  mermaid  pre-commit-pyright  publish  sync-pre-commit.py  tests  typing-package-versions
tests/: conftest.py
tests/acceptance/: app.py  conftest.py  django_settings.py  param.py  test_async.py  test_django.py  test_nominal.py  test_shell.py  test_sync.py
tests/acceptance2/: app.py  conftest.py  test_suite.py  utils.py
tests/benchmarks/: conftest.py  test_benchmark_async.py  test_benchmark_sync.py
tests/integration/: test_admin.py  test_aiopg_connector.py  test_bla.py  test_cli.py  test_healthchecks.py  test_manager.py  test_nominal.py  test_pg_connector.py  test_pg_store.py  test_postgres.py  test_psycopg2_connector.py  test_psycopg3_connector.py  test_psycopg_connector.py  test_schema.py  test_store.py  test_sync_psycopg_connector.py  test_task_worker.py  test_wait_stop.py  test_worker.py
tests/migration/: pgservice.ini  test_migration.py
tests/unit/: conftest.py  test_aiopg_connector.py  test_app.py  test_blueprints.py  test_builtin_tasks.py  test_cli.py  test_connector.py  test_django_utils.py  test_job_context.py  test_job_processor.py  test_jobs.py  test_json_adapter.py  test_main.py  test_manager.py  test_middleware.py  test_migration.py  (+22 more)
(+239 files in other folders)
