[build-system]
requires = ["setuptools", "versioningit"]
build-backend = "setuptools.build_meta"

[tool.versioningit]

[project]
name = "procrastinate"
dynamic = ["version"]
description = "Postgres-based distributed task processing library"
license = { file = "LICENSE.md " }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
]
authors = [
    { name = "Joachim Jablon", email = "ewjoachim@gmail.com" },
    { name = "Eric Lemoine" },
    { name = "Kai Schlamp" },
]
readme = "README.md"
keywords = ["postgres", "task-queue"]
requires-python = ">=3.9"
dependencies = [
    "psycopg[pool]",
    "asgiref",
    "attrs",
    "contextlib2; python_version < '3.10'",
    "croniter",
    "python-dateutil",
    "typing-extensions",
]

[project.optional-dependencies]
django = ["django>=2.2"]
sqlalchemy = ["sqlalchemy~=2.0"]
aiopg = ["aiopg", "psycopg2-binary"]
psycopg2 = ["psycopg2-binary"]
sphinx = ["sphinx"]

[project.urls]
homepage = "https://procrastinate.readthedocs.io/"
source = "https://github.com/procrastinate-org/procrastinate/"
documentation = "https://procrastinate.readthedocs.io/"
issues = "https://github.com/procrastinate-org/procrastinate/issues"
changelog = "https://github.com/procrastinate-org/procrastinate/releases"

[project.scripts]
procrastinate = 'procrastinate.cli:main'


[tool.setuptools.packages.find]
include = ["procrastinate"]

[tool.uv]
cache-keys = [{ git = { commit = true, tags = true } }]
default-groups = [
    "release",
    "lint_format",
    "pg_implem",
    "django",
    "test",
    "docs",
]

[dependency-groups]
types = ["django-stubs"]
release = ["dunamai"]
lint_format = ["ruff"]
pg_implem = [
    "aiopg",
    "sqlalchemy",
    "psycopg2-binary",
    "psycopg[binary,pool]; sys_platform != 'darwin' or platform_machine != 'arm64'",
    "psycopg[binary,pool]; sys_platform == 'darwin' and platform_machine == 'arm64' and python_version >= '3.10'",
    "psycopg[pool]; sys_platform == 'darwin' and platform_machine == 'arm64' and python_version < '3.10'",
]
django = [
    "django~=4.2.0; python_version < '3.10'",
    "django; python_version >= '3.10'",
]
test = [
    "pytest-asyncio",
    "pytest-cov",
    "pytest-django",
    "pytest-mock",
    "migra",
    # migra depends on schemainspect, which has an implicit dependency on setuptools
    # (pkg_resources).
    "setuptools",
]
docs = [
    "django>=2.2",
    "furo",
    "Sphinx",
    "sphinx-copybutton",
    "sphinx-github-changelog",
    "sphinxcontrib-programoutput",
    "sphinxcontrib-mermaid",
    "myst-parser",
]
dev = ["ruff", "pyright", "doc8"]

[tool.pytest.ini_options]
addopts = ["-vv", "--strict-markers", "-rfE", "--reuse-db"]
testpaths = [
    "tests/unit",
    "tests/integration",
    "tests/acceptance",
    "tests/migration",
]
filterwarnings = """
    error
    ignore:unclosed.+:ResourceWarning
"""
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
DJANGO_SETTINGS_MODULE = "tests.acceptance.django_settings"


[tool.coverage.run]
relative_files = true
omit = [
    "procrastinate/contrib/django/migrations/*",
    # It really wouldn't make sense to test the admin config, I guess ?
    "procrastinate/contrib/django/admin.py",

]

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
    "coverage: exclude",
    "if TYPE_CHECKING:",
    "[ ]+\\.\\.\\.$",
]

[tool.pyright]
exclude = ["tests", ".venv", "scripts"]

[tool.ruff]
target-version = "py39"
extend-exclude = [".venv"]

[tool.ruff.lint]
extend-select = [
    "UP",  # pyupgrade
    "I",   # isort
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "RUF", # ruff
]
fixable = ["ALL"]
extend-ignore = [
    "E501", # line too long
    # It's not exactly false but it's not supported enough by our dependencies,
    # so ruff is fighting with Pyright on this.
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.doc8]
max-line-length = 88
ignore-path = "docs/_build,.venv"
