[metadata]
name = procrastinate
description = Postgres-based distributed task processing library
version = 0.1.1
author = PeopleDoc
author_email = joachim.jablon@people-doc.com
url = https://github.com/peopledoc/procrastinate
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
license = MIT License
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    # Install psycopg2 from wheels on mac os, it's really complicated otherwise
    psycopg2-binary; platform_system=="Darwin"
    psycopg2; platform_system!="Darwin"
    attrs
    pendulum
    click
    typing-extensions
    # Backport from Python 3.8
    importlib-metadata
    importlib-resources

[options.extras_require]
dev =
    black
    isort

test =
    pytest
    pytest-mock
    pytest-cov
    pytest-click

lint =
    black
    flake8
    isort
    mypy
    check-manifest

docs =
    doc8
    sphinx
    sphinx_autodoc_typehints
    sphinxcontrib-programoutput

[options.packages.find]
include = procrastinate

[options.entry_points]
console_scripts =
    procrastinate = procrastinate.cli:main


[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
not_skip = __init__.py

[flake8]
max-line-length = 88

[doc8]
max-line-length=88

[tool:pytest]
addopts =
    --cov-report term-missing --cov-branch --cov-report html --cov-report term
    --cov=procrastinate -vv
testpaths =
    tests/unit
    tests/integration
    tests/acceptance

[mypy-setuptools.*,psycopg2.*,pendulum.*,importlib_metadata.*,importlib_resources.*]
ignore_missing_imports = True

[coverage:report]
exclude_lines =
    raise NotImplementedError
    coverage: exclude
    if TYPE_CHECKING:
    [ ]+\.\.\.$
