[metadata]
name = procrastinate
description = Postgres-based distributed task processing library
author = PeopleDoc
author_email = joachim.jablon@people-doc.com
url = https://github.com/peopledoc/procrastinate
long_description = file: README.rst
keywords =
license = MIT License
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License

[options]
 # mypy.readthedocs.io/en/stable/installed_packages.html#making-pep-561-compatible-packages
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    aiopg
    attrs
    click
    croniter
    python-dateutil
    psycopg2-binary  # This is a dependency of aiopg anyway
    typing-extensions
    # Backport from Python 3.8
    importlib-metadata
    importlib-resources

[options.extras_require]
dev =
    tox
    black
    isort>=5.0.0

test =
    pytest
    pytest-mock
    pytest-cov
    pytest-click
    pytest-django
    pytest-asyncio!=0.11.0
    pum

lint =
    black
    flake8
    isort
    mypy
    check-manifest

docs =
    doc8
    sphinx>=3.1.1
    sphinx_autodoc_typehints
    sphinxcontrib-programoutput
    requests  # For changelog

docs_spelling =
    sphinxcontrib-spelling

django = 
    django>=2.2

[options.packages.find]
include =
    procrastinate
    procrastinate.*

[options.entry_points]
console_scripts =
    procrastinate = procrastinate.cli:main

[isort]
profile = black
known_first_party = procrastinate
skip = .venv,.tox

[flake8]
# This section ensures black and flake8 play nice together
max-line-length = 88
# E203: whitespace before colon on list slice: mylist[1 : 2]
extend-ignore = E203
extend-exclude = .venv

[doc8]
max-line-length=88
ignore-path=docs/_build,.venv

[tool:pytest]
addopts =
    --cov-report term-missing --cov-branch --cov-report html --cov-report term
    --cov=procrastinate -vv --strict-markers -rfE
testpaths =
    tests/unit
    tests/integration
    tests/acceptance
    tests/migration
DJANGO_SETTINGS_MODULE = tests.acceptance.django_settings

[mypy]
no_implicit_optional = True

[mypy-setuptools.*,psycopg2.*,importlib_metadata.*,importlib_resources.*,aiopg.*,croniter.*]
ignore_missing_imports = True

[mypy-procrastinate.contrib.django.*]
ignore_errors = True

[coverage:report]
exclude_lines =
    raise NotImplementedError
    coverage: exclude
    if TYPE_CHECKING:
    [ ]+\.\.\.$

[check-manifest]
ignore =
    VERSION.txt
